--- a/constellation_react/src/sass/style.scss
+++ b/constellation_react/src/sass/style.scss
@@ -326,18 +326,18 @@
     display: flex;
     width: inherit;
     white-space: pre-wrap !important;
-    word-wrap: break-all !important;
+    ;
     p {
       width: 70vw;
       white-space: pre-wrap !important;
-      word-wrap: break-all !important;
+      ;
     }
 
     code {
       // color: #15cb19;
       background-color: rgba(217, 217, 217, 0.5);
       white-space: pre-wrap !important;
-      word-wrap: break-all !important;
+      ;
     }
   }
 
