--- a/sui_react/src/sass/style.scss
+++ b/sui_react/src/sass/style.scss
@@ -316,17 +316,17 @@
     display: flex;
     width: inherit;
     white-space: pre-wrap !important;
-    word-wrap: break-all !important;
+    ;
     p {
       width: 70vw;
       white-space: pre-wrap !important;
-      word-wrap: break-all !important;
+      ;
     }
 
     code {
       color: #15cb19;
       white-space: pre-wrap !important;
-      word-wrap: break-all !important;
+      ;
     }
   }
 
